# orcinus

./: .bumpversion.cfg  .gitignore  .travis.yml  ISSUES.md  LICENSE  README.md  TODO.md  WIP.md  compile.py  conftest.py  example.orx  mkdocs.yml  requirements.txt  setup.cfg  setup.py  test_compiler.py
docs/: index.md  reference.md
orcinus/: builder.py  cli.py  codegen.py  collections.py  compiler.py  diagnostics.py  exceptions.py  flow.py  locations.py  parser.py  proctools.py  scanner.py  semantic.py  signals.py  symbols.py  syntax.py  utils.py  workspace.py
orcinus/compiler/: builder.py
orcinus/server/: constants.py  converters.py  server.py
orcinus/tests/: __init__.py  test_codegen.py  test_flow.py  test_parser.py  test_syntax.py
orcinus/tests/utils/: parser.py
runtime/: .clang-format  .gitignore  CMakeLists.txt
runtime/source/orx/: memory.c  memory.h  processor.c  processor.h  promise.c  promise.h  runtime.c  runtime.h  string.c  types.h  wire.c  wire.h
runtime/source/orx/io/: file.c  stream.c  stream.h
runtime/source/orx/modules/: integers.c
runtime/source/orx/modules/io/: file.c
runtime/vendors/libatomic/: CMakeLists.txt
runtime/vendors/libcoro/: CMakeLists.txt  coro.c  coro.h
runtime/vendors/libgc/: CMakeLists.txt
runtime/vendors/libgmp/: CMakeLists.txt
runtime/vendors/liblfds/: CMakeLists.txt
runtime/vendors/libmpfr/: CMakeLists.txt
runtime/vendors/libutf8/: CMakeLists.txt
runtime/vendors/libuv/: CMakeLists.txt
tests/: 0001-simple-main-function.orx
tests/codegen/: 0005-condition-with-else-false.orx  0006-condition-multiple.orx  0006-while-simple-true.orx  0007-while-simple-false.orx  0010-while-with-else-after.orx  0011-while-with-after.orx  0012-call-named-function.orx  0013-call-attribute-function.orx  0014-class-method-call.orx  0015-merge-variables-success.orx  0016-merge-variables-failed.orx  0017-while-unreachable.orx  0018-class-circular-dependency-directed.orx  0020-exit-unreachable.orx  README
tests/codegen/algorithmic/: 0001.orx
tests/codegen/boolean/: 0001-boolean-eq-true.orx  0002-boolean-eq-false.orx  0003-boolean-ne.orx
tests/codegen/classes/: 0002-class-function-call.orx  0004-class-circular-dependency-undirected.orx
tests/codegen/expressions/: 0001-logic-simple.orx  0002-logic-context.orx  0003-logic-casting.orx
tests/codegen/functions/: 0004-exit-call.orx
tests/codegen/integers/: 0001-integer-add.orx  0002-integer-sub.orx  0003-integer-mul.orx  0004-integer-eq.orx  0005-integer-ne.orx  0006-integer-lt.orx  0007-integer-le.orx  0008-integer-gt.orx  0009-integer-ge.orx  0009-integer-pos.orx  0010-integer-neg.orx
tests/codegen/io/: 0001-read-file.orx  0002-write-file.orx
tests/codegen/statements/: 0001-condition-simple-true.orx  0002-condition-simple-false.orx  0008-while-with-else-true.orx  0009-while-with-else-false.orx  0010-while-with-else-after.orx  0014-condition-unreachable.orx  0016-with-simple.orx
tests/codegen/types/: 0001-integers.orx  0002-booleans.orx
tests/syntax/: 0001-simple-main-function.orx  README
